--- a/pawng.html
+++ b/pawng.html
@@ -11,7 +11,7 @@
 
 <body>
 
-    <div class="container p-5 d-flex flex-column align-items-center">
+    <div class="container p-5 d-flex flex-column align-items-center" style="overflow-y: hidden; position: fixed;">
         <h5><u>pawNG</u></h5>
         <div class="oldWindow d-flex flex-column text-center">
             <div class="topBar d-flex justify-content-between align-items-center">
@@ -27,7 +27,7 @@
 
         <a class="" href="index.html">Home</a>
 
-        <script src="pawNG-v2.js"></script>
+        <script src="pawng.js"></script>
 
 
     </div>
