--- a/jsprojects.html
+++ b/jsprojects.html
@@ -8,67 +8,157 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>kafka.dev/jsprojects</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="jsprojectsstyles.css">
+    <script src="jsprojects-base.js"></script>
     <script src="jsprojects.js"></script>
 </head>
 
-<body class="clouds-background">
-    <!--This is where the info box will go along with quick links that jump to part of page where project is. It will be fixed, non-scrollable-->
-    <div class="align-items-between justify-content-between">
-        <div class="container d-flex flex-column p-5 align-items-right">
-            <!-- Add text box here with option to return to the homepage, info on current page maybe it should have a drop-down navigation menu -->
-            <!--Info Text Box-->
-            <div class="fixed-container d-flex flex-column p-3 align-items-right">
-                <div class="navWindow card flex-column" style="width: 20rem; height: 20rem;">
-                    <div class="card-bodytext-center">
-                        <h5 class="topBar custom-windowTitle d-flex justify-content-between p-1 m-0">
-                            <div class="d-flex align-items-center">
-                                <!-- <img src="images/Logos/xsmTopBarLogo.png" alt="logo" width="16" height="12"> -->
-                                <div class="d-flex m-1 my-0">kafka.dev/jsprojects</div>
-                            </div>
-                            <div class="d-flex">
+<body class="clouds-background large-box-body" style="overflow-y: scroll;">
 
-                                <!--Click Min Button-->
-                                <button
-                                    class="minButton d-flex my-0 mx-0 align-items-center justify-content-center">&#95;</button>
-
-                                <!--Click Max Button-->
-                                <button
-                                    class="maxButton d-flex m-1 my-0 align-items-center justify-content-center">&square;</button>
-
-                                <!--Click Close Button-->
-                                <button class="xButton d-flex my-0 mx-0 align-items-center justify-content-center"
-                                    onclick="navLink('index.html')">x</button>
-                            </div>
-                        </h5>
-                        <!--Drop down menu. Notes: create section 1 div id, and then put that in the "#"-->
-                        <div class="d-flex p-0">
-                        <div class="dropdown flex-column my-1 mx-1 p-0">
-                            <div class="dropdown-button"><u>M</u>enu</div>
-                            <div class="dropdown-content">
-                                <a href="#">Project 1</a>
-                                <a href="#">Project 2</a>
-                                <a href="#">Project 3</a>
-                            </div>
-                        </div>
-                    </div>
-                        <div class="d-flex pt-1 align-items-center justify-content-center">
-                            <div class="text-card p-1 align-items-center justify-content-center"
-                                style="width: 19rem; height: 16rem; overflow-y: scroll;">
-                                <div class="window-welcomeText">
-                                    <p>The purpose of this page is to serve as a spot where all the projects I created
-                                        while
-                                        <i>first</i> learning javascript could hang out and get to know one another.
-                                    </p>
+    <div class="align-items-between">
+        <div class="large-container">
+            <div class="nav-container">
+                <!--Info Text Box-->
+                <div class="fixed-container d-flex flex-column p-3 align-items-right">
+                    <div class="navWindow card flex-column" style="width: 20rem; height: 20rem;">
+                        <div class="card-bodytext-center">
+                            <h5 class="topBar custom-windowTitle d-flex justify-content-between p-1 m-0">
+                                <div class="d-flex align-items-center">
+                                    <div class="d-flex m-1 my-0">kafka.dev/jsprojects/nav</div>
                                 </div>
+                                <div class="d-flex">
+                                    <!--Click Min Button-->
+                                    <button
+                                        class="minButton d-flex my-0 mx-0 align-items-center justify-content-center">&#95;</button>
+                                    <!--Click Max Button-->
+                                    <button
+                                        class="maxButton d-flex m-1 my-0 align-items-center justify-content-center">&square;</button>
+                                    <!--Click Close Button-->
+                                    <button class="xButton d-flex my-0 mx-0 align-items-center justify-content-center"
+                                        onclick="navLink('index.html')">x</button>
+                                </div>
+                            </h5>
+                            <!--Drop down menu. Notes: create section 1 div id, and then put that in the "#"-->
+                            <div class="d-flex p-0">
+                                <div class="dropdown flex-column my-1 mx-1 p-0">
+                                    <div class="dropdown-button"><u>M</u>enu</div>
+                                    <div class="dropdown-content">
+                                        <a href="index.html">Home</a>
+                                        <a href="pawng.html">pawNG</a>
+                                        <!-- <a href="#">Project 3</a> -->
+                                    </div>
+                                </div>
+                                <div class="d-flex p-0">
+                                    <div class="dropdown flex-column my-1 mx-1 p-0">
+                                        <div class="dropdown-button"><u>F</u>ile</div>
+                                        <div class="dropdown-content">
+                                            <a href="#">Project 1</a>
+                                            <a href="#">Project 2</a>
+                                            <a href="#">Project 3</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="d-flex pt-0 align-items-center justify-content-center">
+                                <div class="pm-scroll-container text-card p-1 align-items-center justify-content-center"
+                                    style="width: 19rem; height: 16rem; overflow-y: hidden;">
+                                    <div class="pm-scroll-content window-menu-text">
+                                        <p>The purpose of this page is to serve as a spot where all the projects I
+                                            created
+                                            while
+                                            <i>first</i> learning javascript could hang out and get to know one another.
+                                        </p>
+                                        <p>The least painful way to navigate this page is by using the <u>F</u>ile menu
+                                            above to select and jump to the project you want to view. You can use the
+                                            <u>M</u>enu menu <i>(I know, and I'm not sorry)</i> to either return to the
+                                            homepage or to see my more substaintive javascript projects. You are also
+                                            welcome to close your browser at any time leaving this website and
+                                            eventually
+                                            your memories of it behind.
+                                        </p>
+
+                                    </div>
+                                    <div class="pm-custom-scrollbar">
+                                        <button class="pm-custom-scrollbar-thumb"></button>
+                                    </div>
+                                </div>
+                                <button class="pm-scroll-button pm-scroll-up-button">▲</button>
+                                <button class="pm-scroll-button pm-scroll-down-button">▼</button>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="d-flex flex-column">
+            <div class="large-box-container">
                 <!--projects go in here, should be stacked on top of each other-->
-
+                <div class="fixed-container d-flex flex-column p-3">
+                    <div class="navWindow card flex-column" style="width: 40rem; height: 42rem;">
+                        <div class="card-bodytext-center">
+                            <h5 class="topBar custom-windowTitle d-flex justify-content-between p-1 m-0">
+                                <div class="d-flex align-items-center">
+                                    <div class="d-flex m-1 my-0">kafka.dev/jsprojects/projects</div>
+                                </div>
+                                <div class="d-flex">
+                                    <!--Click Min Button-->
+                                    <button
+                                        class="minButton d-flex my-0 mx-0 align-items-center justify-content-center">&#95;</button>
+                                    <!--Click Max Button-->
+                                    <button
+                                        class="maxButton d-flex m-1 my-0 align-items-center justify-content-center">&square;</button>
+                                    <!--Click Close Button-->
+                                    <button class="xButton d-flex my-0 mx-0 align-items-center justify-content-center"
+                                        onclick="navLink('index.html')">x</button>
+                                </div>
+                            </h5>
+                            <div class="d-flex pt-4 align-items-center justify-content-center">
+                                <div class="text-card p-1 align-items-center justify-content-center"
+                                    style="width: 39rem; height: 38.5rem; overflow-y: scroll;">
+                                    <!--P1: Stop Watch-->
+                                    <div class="p1-stopwatch-container flex-row justify-content-evenly align-items-evenly pt-3"
+                                        id="stopwatch">
+                                        <!--Project goes here!-->
+                                        <div class="smallWindow card flex-column">
+                                            <h5
+                                                class="topBar custom-windowTitle d-flex justify-content-between p-1 m-0">
+                                                <div class="d-flex align-items-center">
+                                                    <div class="d-flex m-1 my-0">kafka.dev/jsprojects/stopWatch</div>
+                                                </div>
+                                                <div class="d-flex">
+                                                    <!--Click Close Button-->
+                                                    <button
+                                                        class="xButton d-flex my-0 mx-0 align-items-center justify-content-center">x</button>
+                                                </div>
+                                            </h5>
+                                            <div class="window-headText pb-3 pt-2"> <span id="minutes">00</span>:<span
+                                                    id="seconds">00</span>:<span id="tens">00</span></div>
+                                            <div
+                                                class="window-bodyText d-flex flex-row align-items-center justify-content-center">
+                                                <button id="button-start" class="button-s-s-r mx-2">Start</button>
+                                                <button id="button-stop" class="button-s-s-r mx-2">Stop</button>
+                                                <button id="button-reset" class="button-s-s-r mx-2">Reset</button>
+                                            </div>
+                                        </div>
+                                        <div class="clockWindow card">
+                                            <h5
+                                                class="topBar custom-windowTitle d-flex justify-content-between p-1 m-0">
+                                                <div class="d-flex align-items-center">
+                                                    <div class="d-flex m-1 my-0">kafka.dev/jsprojects/clock</div>
+                                                </div>
+                                                <div class="d-flex">
+                                                    <!--Click Close Button-->
+                                                    <button
+                                                        class="xButton d-flex my-0 mx-0 align-items-center justify-content-center">x</button>
+                                                </div>
+                                            </h5>
+                                            <div id="digitalClockDisplay" class="clock" onload="displayTime()"></div>
+                                            <!--(for popup) Note: the lack of AM/PM is not on account of laziness or any particular positive feelings toward Quebec, but rather perference.-->
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
