--- a/index.html
+++ b/index.html
@@ -78,11 +78,33 @@
                                     class="open-popup xButton d-flex align-items-center justify-content-center">x</button>
                             </div>
                         </h5>
-                        <p class="window-bodyText">I am a professional and accordindly I have <s>proof</s> a portfolio.
+                        <p class="window-bodyText">I am a pawfessional and accordindly I have <s>proof</s> a portfolio.
                             I'd be happy to show you...</p>
                     </div>
                     <div class="d-flex flex-column align-items-center justify-content-center">
                         <button id="portfolioButton" class="okButton" onclick="navLink('portfolio.html')">OK</button>
+                    </div>
+                </div>
+            </div>
+            <!--CREATE POPUP FOR x BUTTON HERE-->
+            <div class="p-3">
+                <div class="navWindow card flex-column d-flex" style="width: 17rem; height: 8.5rem;">
+                    <div class="card-bodytext-center">
+                        <h5 class="topBar custom-windowTitle d-flex justify-content-between p-1">
+                            <div class="d-flex align-items-center">
+                                <!-- <img src="images/Logos/xsmTopBarLogo.png" alt="logo" width="16" height="12"> -->
+                                <div class="d-flex m-1 my-0">kafka.dev/jsprojects</div>
+                            </div>
+                            <div class="align-items-right">
+                                <!--x Button on the Portfolio Box Window-->
+                                <button data-popup-id="xProjectsPopup"
+                                    class="open-popup xButton d-flex align-items-center justify-content-center">x</button>
+                            </div>
+                        </h5>
+                        <p class="window-bodyText">Press OK to view javascript projects that caused significantly less tears than the custom scrollbar on this page.</p>
+                    </div>
+                    <div class="d-flex flex-column align-items-center justify-content-center">
+                        <button id="projectsButton" class="okButton" onclick="navLink('jsprojects.html')">OK</button>
                     </div>
                 </div>
             </div>
@@ -205,6 +227,8 @@
                     my father.</p>
             </div>
         </div>
+        <!--CREATE POPUP FOR xPortfolio BUTTON HERE-->
+        <!--CREATE POPUP FOR xProjects BUTTON HERE-->
     </div>
     </div>
     </div>
