added date to time in jsprojects

--- a/jsprojects.html
+++ b/jsprojects.html
@@ -142,7 +142,7 @@
                                             <h5
                                                 class="topBar custom-windowTitle d-flex justify-content-between p-1 m-0">
                                                 <div class="d-flex align-items-center">
-                                                    <div class="d-flex m-1 my-0">kafka.dev/jsprojects/clock</div>
+                                                    <div class="d-flex m-1 my-0">kafka.dev/jsprojects/time</div>
                                                 </div>
                                                 <div class="d-flex">
                                                     <!--Click Close Button-->
@@ -150,7 +150,8 @@
                                                         class="xButton d-flex my-0 mx-0 align-items-center justify-content-center">x</button>
                                                 </div>
                                             </h5>
-                                            <div id="digitalClockDisplay" class="clock" onload="displayTime()"></div>
+                                            <div id="digitalClockDisplay" class="clock"></div>
+                                            <div id="currentDateDisplay" class="date"></div> 
                                             <!--(for popup) Note: the lack of AM/PM is not on account of laziness or any particular positive feelings toward Quebec, but rather perference.-->
                                         </div>
                                     </div>
