--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
             <div class="card-bodytext-center">
                 <h5 class="topBar custom-windowTitle d-flex justify-content-between p-1">
                     <div class="d-flex align-items-center">
-                        <div class="d-flex m-1 my-0">kafka.dev/welcome</div>
+                        <div class="d-flex m-1 my-0">kafka.dev/aboutMEow</div>
                     </div>
                     <div class="d-flex">
 
@@ -35,34 +35,48 @@
                             onclick="navLink('index.html')">x</button>
                     </div>
                 </h5>
-                <div class="d-flex flex-column pt-3 ps-2 align-items-left justify-content-evenly">
-                    <div class="text-card scroll-container-about mb-3 align-items-center"
-                        style="width: 20.5rem; height: 14.5rem; position: relative;">
-                        <div class="scroll-content-about window-welcomeText">
-                            <p>Kafka says:</p>
-                            <p> This is more example text that comes first but that I wrote second. <i>This text is
-                                    italicized that kindly requests you avoid using the scrollbar when there is no
-                                    scrollable content so that you do not see the bugs as they are shy.</i> <i>This text is
+                <div class="d-flex flex-row pt-3 ps-2">
+                    <div class="d-flex flex-column">
+                        <div class="text-card scroll-container-about mb-3"
+                            style="width: 20.5rem; height: 14.5rem; position: relative;">
+                            <div class="scroll-content-about window-welcomeText">
+                                <p>Kafka says:</p>
+                                <p> This is more example text that comes first but that I wrote second. <i>This text is
                                         italicized that kindly requests you avoid using the scrollbar when there is no
-                                        scrollable content so that you do not see the bugs as they are shy.</i><i>This text is
-                                            italicized that kindly requests you avoid using the scrollbar when there is no
-                                            scrollable content so that you do not see the bugs as they are shy.</i></p>
+                                        scrollable content so that you do not see the bugs as they are shy.</i> <i>This
+                                        text
+                                        is
+                                        italicized that kindly requests you avoid using the scrollbar when there is no
+                                        scrollable content so that you do not see the bugs as they are shy.</i><i>This
+                                        text
+                                        is
+                                        italicized that kindly requests you avoid using the scrollbar when there is no
+                                        scrollable content so that you do not see the bugs as they are shy.</i></p>
+                            </div>
+                            <div class="custom-scrollbar-about">
+                                <button class="custom-scrollbar-thumb-about"></button>
+                            </div>
                         </div>
-                        <div class="custom-scrollbar-about">
-                            <button class="custom-scrollbar-thumb-about"></button>
+                        <button class="scroll-button scroll-up-button-about">▲</button>
+                        <button class="scroll-button scroll-down-button-about">▼</button>
+                        <div class="d-flex text-card" style="width:20.5rem; height:6rem">
+                            <div class="text-caret"></div>
                         </div>
                     </div>
-                    <button class="scroll-button scroll-up-button-about">▲</button>
-                    <button class="scroll-button scroll-down-button-about">▼</button>
-
-                    <div class="d-flex text-card" style="width:20.5rem; height:5.5rem">
-                        <div class="window-welcomeText">
-                            <p>...</p>
+                    <div class="d-flex flex-column ps-2 justify-content-between">
+                        <div class="text-card window-welcomeText d-flex justify-content-center" style="width: 6rem; height: 6rem">
+                            <img src="images/Kafka Chat Portrait 2.png" width="110px" height="110px">
                         </div>
-
+                        <div class="text-card window-welcomeText d-flex justify-content-center" style="width: 6rem; height: 6rem">
+                            <img src="images/Anon Chat Portrait.png" width="110px" height="110px">
+                        </div>
                     </div>
                 </div>
             </div>
+
+
+
+
         </div>
 
     </div>
